# Vulkan_Specs

./: BackgroundCheck.cpp  BackgroundCheck.h  CMakeLists.txt  Initializer.cpp  Initializer.h  PipelineResourceSetup.cpp  PipelineResourceSetup.h  README.md  Renderer.cpp  Renderer.h  build_configs.h  global_inline.h  main.cpp
Initialization/: Creater.cpp  Creater.h  ExtensionManager.cpp  ExtensionManager.h  Filler.cpp  Filler.h  LayerManager.cpp  LayerManager.h  Types.h
shaders/: triangle.frag.glsl  triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
